apps/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4466
  selector:
    app: headlamp
